# resizer

./: .gitignore  configure.ac
src/: Makefile.am  main.c
